--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!doctype html>
+<html class="no-js" lang="">
 
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="manifest" href="site.webmanifest">
+  
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+
+  <!-- Add your site or application content here -->
+  <h1>Forgecamp Support Information</h1>
+  <p>For all support inquiries, please click <a href="mailto://forgecampdev@gmail.com">here</a> to email the developer.</p>
+  <p>Please include something along the lines of "Forgecamp Support Request:", with the app you're inquiring about after the colon, as the subject text and the issue you're having in the body of the email.</p>
+  <p>Thanks!</p>
+
+</body>
+
+</html>
