--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Add your site or application content here -->
   <h1>Forgecamp Support Information</h1>
-  <p>For all support inquiries, please click <a href="mailto://forgecampdev@gmail.com">here</a> to email the developer.</p>
+  <p>For all support inquiries, please click <a href="mailto:forgecampdev@gmail.com">here</a> to email the developer.</p>
   <p>Please include something along the lines of "Forgecamp Support Request:", with the app you're inquiring about after the colon, as the subject text and the issue you're having in the body of the email.</p>
   <p>Thanks!</p>
 
